[gd_scene load_steps=5 format=3 uid="uid://bq425x5qtxnpe"]

[ext_resource type="Theme" uid="uid://c0j6fiiejc40k" path="res://Assets/Themes/MenuTheme.tres" id="1_qnnf3"]
[ext_resource type="Script" uid="uid://bubtjq12fctuj" path="res://Scripts/upgrades.gd" id="2_lisd6"]
[ext_resource type="PackedScene" uid="uid://bfh5dlre2y7l0" path="res://Scenes/Objects/coinLabel.tscn" id="2_mstou"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lisd6"]
bg_color = Color(0.164706, 0.137255, 0.298039, 0.803922)

[node name="Upgrades" type="Control"]
process_mode = 3
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qnnf3")
script = ExtResource("2_lisd6")
lifeBaseCost = 100

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lisd6")

[node name="Label" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 32.0
offset_right = 89.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "UPGRADES"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1000, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Life Upgrade" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(900, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Life Upgrade"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = -24.5
offset_right = 119.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Life Upgrade/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "LIFE UPGRADE"
horizontal_alignment = 1

[node name="Coins" parent="PanelContainer/VBoxContainer/Life Upgrade/HBoxContainer" instance=ExtResource("2_mstou")]
layout_mode = 2

[node name="Exit" type="Button" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -93.0
offset_right = 42.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "EXIT"

[node name="Coins" parent="." instance=ExtResource("2_mstou")]
layout_mode = 1
offset_left = -258.0
offset_top = 32.0
offset_right = -106.0
offset_bottom = 81.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Life Upgrade" to="." method="_on_life_upgrade_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]

[editable path="Coins"]
